--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,202 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
+}
+
+body {
+  font-size: 10px;
+  font-family: Tahoma, Helvetica, Arial;
+  margin: 0;
+}
+
+.nav,.nav a,.nav ul,.nav li {
+  margin: 0;
+  padding: 0;
+  border: none;
+  outline: none;
+}
+
+.nav a {
+  text-decoration: none;
+}
+
+.nav li {
+  list-style: none;
+}
+
+.nav {
+  padding-top: 20px;
+  padding-bottom: 10px;
+  background-attachment: fixed;
+  background-position: top;
+  background-size: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.nav li {
+  display: block;
+  float: left;
+}
+
+.nav li a {
+  position: relative;
+  display: block;
+  z-index: 510;
+  height: 54px;
+  padding: 0 20px;
+  line-height: 54px;
+
+  font-family: 'Roboto', 'Open Sans', Helvetica, Arial, sans-serif;
+  font-weight: bold;
+  font-size: 13px;
+  color: black;
+  background-color: #eaeaea;
+
+  -webkit-transition: all .3s ease;
+  -moz-transition: all .3s ease;
+  -o-transition: all .3s ease;
+  -ms-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+.nav li:hover a {
+  background: #aaaaaa;
+}
+
+.nav li:first-child a {
+  border-radius: 3px 0 0 3px;
+}
+
+.nav li:last-child a {
+  border-radius: 0 3px 3px 0;
+}
+
+.heads {
+  background-color: #6ad655;
+}
+
+.heads h1 {
+  text-align: center;
+  display: block;
+  font-size: 50px;
+  margin: 0;
+  padding-top: 30px;
+}
+
+.alignment {
+  margin: 0 auto;
+}
+
+.login {
+  text-align: center;
+}
+
+.signup {
+  text-align: center;
+}
+
+.head {
+  font-size: 30px !important;
+  padding: 10px;
+}
+
+label, input {
+  font-size: 15px;
+  margin-bottom: 15px;
+}
+
+#login, #signup, #add {
+  font-size: 15px;
+  margin-bottom: 50px;
+  padding: 5px 75px;
+}
+
+.leftFloater {
+  width: 100%;
+  text-align: center;
+  margin-right: auto;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+  position: relative;
+}
+
+.rightFloater {
+  float: right;
+  font-size: 15px;
+  margin-bottom: 50px;
+  padding: 5px 75px;
+}
+
+.centerAlign {
+  text-align: center;
+}
+
+.wrapper {
+  max-width: 100%;
+  position: relative;
+}
+
+.content-wrapper {
+  float: left;
+  width: 100%;
+}
+
+.content {
+  margin-right: 320px;
+  clear: both;
+  overflow: auto;
+  min-height: 600px;
+}
+
+.sidebar {
+  position: relative;
+  width: 320px;
+  margin-left: -320px;
+  float: right;
+  overflow: hidden;
+  min-height: 600px;
+}
+
+.charts {
+  display:flex;
+}
+
+table {
+  border-spacing: 0;
+  border: 1px solid black;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+table tr :last-child td {
+  border-bottom: 0;
+}
+
+table th, table td {
+  font-size: 20px;
+  padding: 0.5rem;
+  border-bottom: 1px solid black;
+  border-right: 1px solid black;
+}
+
+table th, table td :last-child {
+  border-right: 0;
+}
+
+table th {
+  background: green;
+  color: white;
+  font-weight: bold;
 }
